--- a/css/themes.css
+++ b/css/themes.css
@@ -18,7 +18,7 @@
         --bg-secondary: #374151;
         --bg-tertiary: #4b5563;
         
-        --text-primary: #f9fafb;
+        --text-primary: #001020;
         --text-secondary: #d1d5db;
         --text-tertiary: #9ca3af;
         
@@ -256,7 +256,7 @@
     --bg-secondary: #3d2317;
     --bg-tertiary: #4a2c1c;
     
-    --text-primary: #ffd4a3;
+    --text-primary: #3a2002;
     --text-secondary: #d4a574;
     --text-tertiary: #a67c52;
     
